# card-fraud-e2e-load-testing

./: .gitignore  AGENTS.md  README.md  auth-only-override.py  docker-compose.yml  platform-adapter.yaml  pyproject.toml
docs/: README.md  codemap.md
docs/01-setup/: README.md
docs/02-development/: README.md  enterprise-local-load-test-plan.md  load-testing-design.md
docs/04-testing/: README.md  rule-engine-auth-only-perf.md
scripts/: generate_report.py  generate_rules.py  generate_rulesets.py  generate_transactions.py  generate_users.py  platform_adapter.py  run_load_test.py
src/: locustfile.py
src/auth/: auth0.py
src/config/: defaults.py
src/generators/: __init__.py
src/tasksets/ops_analyst/: investigations.py  worklist.py
src/tasksets/rule_engine/: auth.py  monitoring.py  postauth.py  preauth.py
src/tasksets/rule_management/: rules.py
src/tasksets/transaction_mgmt/: ingestion.py  query.py
src/utilities/: harness.py  metrics.py  minio_client.py  reporting.py
